ui/scss/init/_gui.scss
/* ... */
.publishList-wrapper {
  .help {
    color: var(--color-text);
  }

  @media (min-width: $breakpoint-small) {
    .claim-preview--collection-editing {
      height: unset;
      position: relative;

      .media__thumb {
        position: relative;
        right: unset;

        .claim-preview__hover-actions {
          display: visible;
        }
      }

      .claim-preview__text {
        position: unset;
        right: unset;
        width: 100%;
        background-color: unset;
        padding: 0;
        border-radius: unset;

        .claim-preview-info {
          .claim-preview__title {
            font-size: var(--font-small);
          }
        }
        .media__subtitle {
          .button__content {
            .channel-name {
              font-size: var(--font-xsmall);
            }
          }
        }
      }
    }
    .button-dislike {
      margin-right: 0;
    }
  }
}

.repost-wrapper {
  // Repost now uses a modal. Lock the width because the bid message
  // keeps changing as you type the desired name.
  min-width: var(--modal-width);
  @media (max-width: $breakpoint-small) {
    min-width: 100%;
  }

  .claim-preview__wrapper {
    background-color: rgba(var(--color-header-background-base), 0.6);
    &:hover {
      background-color: rgba(var(--color-header-background-base), 0.9);
    }
    .claim-tile__info {
      padding-bottom: 0;
    }
    .claim-preview__actions {
      .claim__tags {
        margin-left: auto;
      }
    }
  }
}

.scheduledLivestream-wrapper {
  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-s);
    padding-top: 0;
  }
}

.custom-wrapper {
  @media (max-width: $breakpoint-small) {
    .card {
      padding: var(--spacing-xxxs);
      .card__title-section {
        width: 100%;
        div:first-of-type {
          width: 100%;
          .card__title {
            width: 100%;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
          }
        }
      }
    }
  }
}

.channelsToFollow-wrapper {
  margin-top: var(--spacing-l);

  .claim-preview__wrapper--channel {
    .claim-preview--channel {
      a.button:not(.tag) {
        .button__content {
          align-items: unset;
        }
      }
    }
    .menu__button {
      right: var(--spacing-xs);
    }
  }
}

.historyPage-wrapper {
  .claim-preview__wrapper {
    .claim-preview__history-remove {
      position: absolute;
      top: var(--spacing-s);
      right: var(--spacing-xs);
      opacity: 0;

      .icon {
        width: 22px;
        height: 22px;
      }

      &:hover {
        .icon {
          stroke: var(--color-primary);
          cursor: pointer;
        }
      }

      @media (max-width: $breakpoint-small) {
        opacity: 1;
      }
    }

    .menu__button.claim__menu-button {
      top: 2.2rem;
    }

    &:hover {
      .claim-preview__history-remove {
        opacity: 1;
      }
    }
  }
}

.premium-wrapper {
  .membership_title {
    .comment__badge {
      .icon {
        margin-bottom: -6px;
      }
    }
  }
  .premium-option {
    background-color: rgba(var(--color-header-background-base), 0.4);
    border-radius: var(--border-radius);
    padding: var(--spacing-m);
    margin-bottom: var(--spacing-m);
  }
}

.static-page {
  .card__title-section {
    padding-bottom: 0;
    .card__title {
      font-size: var(--font-title);
    }
  }
  p {
    margin-top: var(--spacing-m);
    &:nth-of-type(1) {
      margin-top: 0;
      margin-bottom: var(--spacing-l);
      opacity: 0.8;
    }
    &:nth-of-type(2) {
      margin-bottom: var(--spacing-l);
    }
  }
  h3 {
    font-size: var(--font-large);
    font-weight: var(--font-weight-bold);
    margin-top: var(--spacing-xl);
    margin-bottom: 0;
  }
  a {
    color: var(--color-primary);
    &:hover {
      color: var(--color-secondary);
    }
  }
}

// Temporary master classes
.date_time {
  font-size: var(--font-xsmall);
}
.icon--ExternalLink {
  margin-top: -5px;
  margin-left: 2px;
  margin-left: var(--spacing-xxs) !important;
}
.markdown-preview {
  .icon--ExternalLink {
    flex-shrink: 0;
    margin-bottom: -1px !important;
    // margin-left:2px !important;
  }
}
.comments {
  .markdown-preview {
    .claim-link {
      width: 40%;
      margin-top: var(--spacing-xs);
      @media (max-width: $breakpoint-small) {
        width: 100%;
      }
    }
  }
}
.hide-ribbon {
  .claim-tile__repost-author {
    display: none;
  }
}
.show-ribbon {
  .claim-tile__repost-author {
    display: block;
  }
}

// Fix Lightbox (Image viewer) modal backdrop bug
// Context: transform, filter and perspective break "position: fixed" in child element
.lb-open-lightbox {
  .ReactModal__Content {
    transform: unset !important;
  }

  .modal {
    -webkit-backdrop-filter: unset;
    backdrop-filter: unset;
  }
}

// Remove resize icon in textareas
::-webkit-resizer {
  display: none;
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}

// Remove tap focus on mobile devices
input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.video-js .vjs-volume-level {
  &::before {
    color: white !important;
  }
}

// Temporary fix for focus-visible
*:focus-visible:not(.modal):not(.card):not(.wunderbar__input):not(.menu__list):not(.menu__list--header):not(.button--secondary):not(.button-like):not(.button-dislike):not(select):not(input):not(textarea):not(video):not([data-reach-tab-panels]):not([data-reach-tabs]):not([data-reach-tab-panel]):not(.CodeMirror-code):not(.MuiModal-root):not(.MuiPaper-root):not(.card):not(#onetrust-banner-sdk):not(.vjs-touch-overlay) {
  background-color: rgba(var(--color-primary-dynamic), 0.2) !important;
  color: var(--color-text) !important;
  box-shadow: 0px 0px 0px 2px var(--color-primary) inset;

  .icon {
    stroke: var(--color-text) !important;
  }
}
/* ... */

